# my_editor

./: Cargo.toml  deny.toml
docs/: keymap.md
src/: app.rs  color.rs  config.rs  document.rs  error.rs  keymap.rs  lib.rs  main.rs  mode.rs  open_candidate.rs  picker_match.rs  theme.rs  ui.rs
src/app/: action.rs  completion.rs  keymap.rs  lsp.rs  navigation.rs  render.rs  replace.rs  search.rs  semantic.rs  shell.rs  terminal_session.rs  workspace.rs
src/document/: editable.rs  large_file.rs  scratch.rs
