[package]
name = "my_editor"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
ropey = "1.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
walkdir = "2.5.0"
