[package]
name = "my_editor"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
nix = { version = "0.31.1", features = ["fs", "process", "term"] }
ratatui = "0.29.0"
ropey = "1.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
vt100 = "0.15.2"
walkdir = "2.5.0"
